--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,5 @@
     "jquery": "^3.2.1",
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0"
-  }
+  }scscskbvjsdkvbefkvbj
 }
-sccssc csln sc
